@startuml
hide empty members

package view {
    class TopicPromptUiController
    together {
        class TopicPromptUiApplication
        class "AnswerController" as grammarAnswerController <<GRAMMAR>>
        class "AnswerController" as openAiAnswerController <<OPEN_AI>>
        class "AnswerController" as claudeAnswerController <<CLAUDE>>
        class "AnswerController" as gcpAnswerController <<GCP>>
        class HistoryController
        class QuestionController
        class TopicController
    }
}

package viewmodel {
    class "AnswerVM" as grammarAnswerVM <<GRAMMAR>>
    class "AnswerVM" as openAiAnswerVM <<OPEN_AI>>
    class "AnswerVM" as claudeAnswerVM <<CLAUDE>>
    class "AnswerVM" as gcpAnswerVM <<GCP>>
    class TopicPromptUiVM
    class HistoryVM
    class QuestionVM
    class TopicVM
    class ViewModelMediator
}

package model{
    class StateModel
    class ClipboardModel
    class FileModel
    class QuestionModel
    class StorageModel
}

TopicController ---> TopicVM
QuestionController ---> QuestionVM
HistoryController ---> HistoryVM
grammarAnswerController --> grammarAnswerVM
openAiAnswerController --> openAiAnswerVM
claudeAnswerController --> claudeAnswerVM
gcpAnswerController --> gcpAnswerVM
TopicPromptUiApplication --> TopicPromptUiVM

TopicPromptUiController --> grammarAnswerController
TopicPromptUiController --> openAiAnswerController
TopicPromptUiController --> claudeAnswerController
TopicPromptUiController --> gcpAnswerController

TopicPromptUiController --> TopicPromptUiVM
TopicPromptUiController --> grammarAnswerVM
TopicPromptUiController --> openAiAnswerVM
TopicPromptUiController --> claudeAnswerVM
TopicPromptUiController --> gcpAnswerVM

TopicVM <--> ViewModelMediator
QuestionVM <--> ViewModelMediator
HistoryVM <--> ViewModelMediator
TopicPromptUiVM --> ViewModelMediator
grammarAnswerVM <--> ViewModelMediator
openAiAnswerVM <--> ViewModelMediator
claudeAnswerVM <--> ViewModelMediator
gcpAnswerVM <--> ViewModelMediator

TopicVM ---> StateModel
HistoryVM ---> StateModel
QuestionVM ---> StateModel
QuestionVM ---> QuestionModel
QuestionVM ---> ClipboardModel

grammarAnswerVM --> StateModel
openAiAnswerVM --> StateModel
claudeAnswerVM --> StateModel
gcpAnswerVM --> StateModel

grammarAnswerVM --> QuestionModel
openAiAnswerVM --> QuestionModel
claudeAnswerVM --> QuestionModel
gcpAnswerVM --> QuestionModel

grammarAnswerVM --> ClipboardModel
openAiAnswerVM --> ClipboardModel
claudeAnswerVM --> ClipboardModel
gcpAnswerVM --> ClipboardModel


@enduml